--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             text-align: center;
             width: 100%;
             height: 100%;
+            background-color: transparent;
             margin: 0 auto;
         }
 
