--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         html {
             margin: 0;
             background-color: #2E3440;
-            /* overflow: hidden; */
+            overflow: hidden;
             user-select: none;
         }
 
