--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
             border: 1px solid #3B4252;
             width: 500px;
             height: 250px;
+            background-color: #3B4252;
             display: none;
-            background-color: #2E3440;
             border-radius: 20px;
             color: #D8DEE9;
             position: absolute;
