--- a/index.html
+++ b/index.html
@@ -240,6 +240,20 @@
             height: 50px;
             width: 70%;
         }
+
+        .badge{
+            position: absolute;
+            left: 45%;
+            top: 45%;
+            color: #D8DEE9;
+            font-family: "Comfortaa";
+            background-color: #3B4252;
+            padding: 20px;
+            border-radius: 10px;
+            font-size: 40px;
+            opacity: 0;
+            z-index: 200;
+        }
     </style>
 
     <div style="position: relative">
@@ -281,6 +295,8 @@
             </div>
         </div>    
     </div>
+
+    <div class="badge">You won!</div>
 
 
     <canvas></canvas>
